# tylluan

./: .dockerignore  .forja-token  .gitignore  AGENTS.md  AI_POLICY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  Dockerfile  LICENSE  OPERATIONS.map  PROJECT.map  README.md  ROADMAP.md  SECURITY.md  STATUS.md  commit_msg.txt  deny.toml  dist-workspace.toml  docker-compose.yml  index.html  install.ps1  install.sh  onboarding_commit_msg.txt  pyproject.toml  tylluan-mcp.bat  tylluan-mcp.sh  tylluan.example.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: benchmark.rs
benchmarks/: README.md  baseline_v0.9.0.json  benchmark_v0.10.0.json  run.py
crates/tylluan-cli/: Cargo.toml
crates/tylluan-cli/src/: main.rs  repl.rs
crates/tylluan-common/: Cargo.toml
crates/tylluan-common/src/: constants.rs  error.rs  lib.rs  types.rs
crates/tylluan-evals/: Cargo.toml
crates/tylluan-evals/benchmarks/: baseline_v0.9.0.json
crates/tylluan-evals/src/: beam_scale.rs  corpus.rs  longmemeval.rs  main.rs  metrics.rs  runner.rs  tests.rs
crates/tylluan-gui/: Cargo.toml
crates/tylluan-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/tylluan-gui/src-tauri/capabilities/: default.json
crates/tylluan-gui/src-tauri/icons/: icon.icns
crates/tylluan-gui/src-tauri/src/: main.rs
crates/tylluan-kernel/: .forja-token-docker  Cargo.toml  build.rs
crates/tylluan-kernel/src/: cleanup.rs  config.rs  consensus.rs  curriculum.rs  guard.rs  hormones.rs  lib.rs  main.rs  maintenance.rs  metrics_ring.rs  process_isolation.rs  setup.rs
crates/tylluan-kernel/src/doctor/: mod.rs
crates/tylluan-kernel/src/federation/: mod.rs
crates/tylluan-kernel/src/memory/: agent_memory.rs  agent_nodes.rs  agent_profile.rs  auto_link.rs  autoresearch.rs  backup.rs  coloquio.rs  consensus.rs  cosine.rs  dream_cycle.rs  dual_retrieval.rs  graph_rag.rs  hybrid.rs  identity.rs  idle_lab.rs  idle_lab_oracle.rs  ivf_index.rs  jobs.rs  louvain.rs  mailbox.rs  migrations.rs  mmap_store.rs  mod.rs  triple_extractor.rs
crates/tylluan-kernel/src/memory/silva/: anchors.rs  autolink.rs  decay.rs  edges.rs  graph.rs  hnsw.rs  maintenance.rs  mod.rs  nodes.rs  schema.rs  search.rs  sharing.rs  tests.rs
crates/tylluan-kernel/src/registry/: actor.rs  approval.rs  guild_process.rs  lifecycle.rs  mod.rs  proxy.rs  service_manager.rs  supervisor.rs  tools.rs
crates/tylluan-kernel/src/router/: catalog.rs  embeddings.rs  matcher.rs  mod.rs
crates/tylluan-kernel/src/security/: circuit_breaker.rs  guard.rs  integration_tests.rs  mod.rs  rate_limiter.rs
crates/tylluan-kernel/src/transport/: mdns.rs  mod.rs
crates/tylluan-kernel/src/transport/http/: api_v1.rs  auth.rs  mod.rs  oauth.rs  sse.rs
crates/tylluan-kernel/src/transport/http/api_v1/: api_admin.rs  api_agents.rs  api_canvas.rs  api_collective.rs  api_coloquio.rs  api_contracts.rs  api_federation.rs  api_guilds.rs  api_ingest.rs  api_journal.rs  api_mcp.rs  api_memory.rs  api_mesh.rs  api_monitor.rs  api_ops.rs  api_silva.rs
crates/tylluan-kernel/src/transport/server/: handler_graph.rs  handler_ingest.rs  handler_recall.rs  handler_remember.rs  handler_think.rs  handlers.rs  intent_enhancer.rs  logic.rs  mod.rs  tools.rs  types.rs  utils.rs
crates/tylluan-kernel/src/transport/server/handler_do/: coloquio_utils.rs  embedding.rs  mod.rs  routing.rs  timeout.rs
crates/tylluan-kernel/src/tunnel/: mod.rs
crates/tylluan-kernel/tests/: blackboard_e2e.rs  broadcast_integration.rs  concurrent_agents.rs  consensus_audit.rs  consensus_stress_test.rs  dashboard_api_audit.rs  dump_catalog_test.rs  federation_audit.rs  foundation_audit.rs  guard_audit.rs  guild_integration_audit.rs  guilds_v2_integration.rs  http_endpoint_tests.rs  integration_mcp.rs  knowledge_guild_test.rs  mailbox_protocol_test.rs  mailbox_stress.rs  mesh_audit.rs  pipeline_tests.rs  route_uniqueness.rs  security_audit.rs  semantic_consensus_audit.rs  semantic_load_test.rs  sovereign_e2e.rs  sovereign_tools_e2e.rs  sqlcipher_audit.rs
crates/tylluan-link/: Cargo.toml
crates/tylluan-link/src/: capability.rs  dispatch.rs  identity.rs  lib.rs  nat.rs  noise.rs  p2p.rs  transport.rs
crates/tylluan-link/src/dht/: announce.rs  bootstrap.rs  mod.rs  routing_table.rs
crates/tylluan-link/src/gossip/: message.rs  mod.rs  state.rs
crates/tylluan-link/tests/: dispatch_dst.rs  fault_dst.rs  gossip_dst.rs  gossip_sync_test.rs  mesh_simulation.rs  p2p_dst.rs
crates/tylluan-proxy/: Cargo.toml
crates/tylluan-proxy/src/: main.rs
dashboard/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  fix_sandbox.py  index.css  main.tsx  vite-env.d.ts
docker-research/searxng/: settings.yml
docs/: M10_BOUNDED_WORK_CONTRACTS.md  QUICKSTART.md  research-references.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_BLUEPRINTS.md  ARCHITECTURE_DECISIONS.md  FEDERATION.md  FEDERATION_V3.md  M14D_dispatch_spec.md  M14F_p2p_dispatch_spec.md  SECURITY.md
docs/guides/: CLIENT_INTEGRATION_GUIDE.md  DOCKER_INSTALL_LESSONS.md  GPU_SETUP.md  HOT_RELOAD_SWAP.md  RUNBOOK_RESTORE.md  tasks_hot_reload.md
docs/research/: ESTRATEGIA_INVESTIGACION.md  FUGU_ANALISIS.md  RESEARCH_INDEX.md  research-references.md  vision-agentic-skills-2026.md
examples/: 01_memory_basics.py  02_multi_agent_coloquio.py  03_knowledge_graph.py  autonomous_multi_hop_demo.md
examples/bounded_work_contract/: run.py
examples/multi_model_coloquio/: requirements.txt  run.py
guilds/: README.md  __init__.py  requirements-optional.txt  requirements.txt
guilds/builders/: __init__.py  guild.md
guilds/core/: __init__.py  _security.py  browser.py  (+13 more)
integrations/: antigravity.json  claude_desktop.json  hermes_desktop.json  lmstudio_sse.json  openclaw_hermes_config.yaml  qwen_desktop.json  vscode_mcp.json
scripts/: build_all.py  coloquio_summarizer.py  install.sh  preflight_check.py  stress_test.py
tools/: tylluan_stdio_proxy.py
(+1102 files in other folders)
