[project]
name = "tylluan-guilds"
version = "3.0.0a1"
description = "Python tool guilds for the TylluanNexus Sovereign Agentic Hub"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.11"
authors = [
    { name = "TylluanMCP Contributors" }
]

dependencies = [
    "mcp>=1.27.0",
    "aiofiles>=24.0.0",
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
    "pyyaml>=6.0.0",
    "psutil>=6.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-rust>=0.24.0",
    "scrapling>=0.2",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]
docker = ["docker>=7.0"]
audio = ["openai-whisper>=20240930"]
comfyui = ["aiohttp>=3.10"]
database = ["asyncpg>=0.30"]

[project.scripts]
tylluan-stdio-proxy = "tools.tylluan_stdio_proxy:main"

[tool.hatch.build.targets.wheel]
packages = ["guilds", "tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E=pycodestyle errors, F=pyflakes (real bugs). Style rules (I/N/UP/W) added when guild files are clean.
select = ["E", "F"]
ignore = ["E501", "F401"]

[tool.ruff.lint.per-file-ignores]
"guilds/**" = ["F401", "F841", "E402", "E401", "F541", "E722"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/python"]
