[package]
name = "tylluan-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and utilities for the TylluanNexus ecosystem"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
