[package]
name = "tylluan-evals"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Honest SilvaDB benchmark — Recall@N, Precision@N, latency percentiles"

[dependencies]
tylluan-kernel = { path = "../tylluan-kernel" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
