[package]
name = "tylluan-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TylluanNexus Kernel — Sovereign Agentic MCP Hub"

[[bin]]
name = "tylluan-nexus"
path = "src/main.rs"

[lib]
name = "tylluan_kernel"
path = "src/lib.rs"

[dependencies]
tylluan-common = { path = "../tylluan-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
dotenvy = "0.15"
rand = "0.8"

# MCP Protocol
rmcp = { version = "0.1", features = ["transport-io", "transport-sse-server", "transport-child-process", "server", "client"] }

# HTTP Server
axum = { version = "0.8", features = ["tokio", "multipart", "macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "compression-br", "compression-gzip"] }

# Utilities (crossterm: removed with TUI. parking_lot: used by tokio)
parking_lot = "0.12"
chrono = "0.4"

# SQLite — default: bundled (no encryption)
# For encryption at rest, change "bundled" to "bundled-sqlcipher" and install OpenSSL dev headers.
# Then set [security] encrypt_at_rest = true and TYLLUAN_DB_KEY env var (64-character hex string).
rusqlite = { version = "0.33", features = ["bundled", "vtab", "trace"] }

# Config
dirs = "6"
notify = "7"
tokio-util = "0.7"

# Semantic embeddings — Sovereign Inference (FastEmbed / ONNX)
fastembed = { version = "5", default-features = false, features = ["ort-load-dynamic", "hf-hub-native-tls", "image-models"] }
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic", "directml"] }

# High-performance vector math
ndarray = "0.16"
image = "0.25"

# Constant-time comparison for timing-attack prevention
subtle = "2.6"

# OAuth 2.0 + PKCE local server
sha2 = "0.10"
base64 = "0.22"
hmac = "0.12"
chacha20poly1305 = "0.10"

# System monitoring for self-healing
sysinfo = "0.32"

# Sovereign Search - local web scraping
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
scraper = "0.22"
tokio-stream = { version = "0.1", features = ["sync"] }
urlencoding = "2.1"
mdns-sd = "0.13"
tar = "0.4.45"
flate2 = "1.1.9"
futures-util = "0.3"
socket2 = { version = "0.5", features = ["all"] }
dashmap = "6"
memmap2 = "0.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["jobapi2", "winnt", "processthreadsapi"] }

[features]
# Build configurations for different deployment scenarios
default = ["semantic"]

# Production: minimal features (use --no-tui flag instead)
production = []

# Minimal: only kernel + MCP, no extras
minimal = []

# Development helpers
semantic = []

# Encryption at rest via SQLCipher (AES-256).
# Bundles SQLCipher + OpenSSL from source — no system deps needed on Linux/macOS/ARM/Docker.
# Windows native: not supported (use Docker Desktop instead).
# Build with: cargo build --features encryption
# Then set [security] encrypt_at_rest = true and TYLLUAN_DB_KEY env var (64-char hex).
encryption = ["rusqlite/bundled-sqlcipher-vendored-openssl"]

# GPU: CUDA execution provider (NVIDIA). Build with `--features cuda`.
# Runtime requires a CUDA-enabled onnxruntime.dll (ORT_DYLIB_PATH) + CUDA 12.x + cuDNN 9 in PATH.
# DirectML needs no feature — always compiled on Windows.
cuda = ["ort/cuda"]

# Integration tests (requires Python, FastMCP, etc.)
integration = []

# Knowledge guild integration tests
guild_knowledge_test = []

[dev-dependencies]
proptest = "1"

