[package]
name = "tylluan-link"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TylluanLink P2P — Sovereign peer-to-peer handshake and discovery"

[dependencies]
anyhow = "1"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
hex = "0.4"
async-trait = "0.1"
thiserror = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
snow = "0.10"

# Optional: Mainline DHT for WAN bootstrap (used in dht::bootstrap)
mainline = { version = "2", optional = true }

[dev-dependencies]
turmoil = "0.6"

[features]
default = []
mainline-dht = ["mainline"]