[package]
name = "tylluan-gui-backend"
version = "3.0.0"
edition = "2021"
authors = ["TylluanMCP Contributors"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
tracing = "0.1"

# Tauri Plugins and Utilities
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-updater = "2.0.0-rc"
reqwest = { version = "0.12", features = ["json"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[workspace]

